Fixing spacing

--- a/scss/components/_views.scss
+++ b/scss/components/_views.scss
@@ -54,7 +54,7 @@
     .view__item:before {
         content: '';
         position: absolute;
-        top: 24px;
+        top: 23px;
         left: 0;
         width: 100%;
         height: 100%;
